back/reservation-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reservation-service
spec:
  selector:
    app: reservation-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
